# rinha-backend-2024-q1-fastapi

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  gconf.py  migration.sql  pyproject.toml
.github/workflows/: testes-rinha.yml
rinha_backend_2024_q1_fastapi/: config.py  database.py  exceptions.py  main.py  models.py  routes.py  schemas.py  services.py  utils.py
rinha_backend_2024_q1_fastapi/core/: config.py  database.py  exceptions.py
tests/: conftest.py  test_rinha.py
