[tool.poetry]
name = "rinha-backend-2024-q1-fastapi"
version = "0.1.0"
description = ""
authors = ["Kalel L. Martinho <kalel@tutamail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "rinha_backend_2024_q1_fastapi.main:start_server"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.109.2"}
sqlmodel = "^0.0.14"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.2.1"
taskipy = "^1.12.2"

[tool.taskipy.tasks]
lint = "ruff . && ruff check --select I . && ruff format . --check && mypy ."
format = "ruff . --fix && ruff format . && ruff check --select I . --fix"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
