[tool.poetry]
name = "rinha-backend-2024-q1-fastapi"
version = "0.1.0"
description = ""
authors = ["Kalel L. Martinho <kalel@tutamail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "rinha_backend_2024_q1_fastapi.main:start_server"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.109.2"}
sqlmodel = "^0.0.14"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.2.1"
taskipy = "^1.12.2"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
pytest-env = "^1.1.3"
pytest-cov = "^4.1.0"
async-asgi-testclient = "^1.4.11"
aiosqlite = "^0.19.0"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
addopts = "-s -x --cov=rinha_backend_2024_q1_fastapi -vv"

[tool.coverage.run]
branch = true
concurrency = ["greenlet", "thread"]

[tool.taskipy.tasks]
lint = "ruff . && ruff check --select I . && ruff format . --check && mypy ."
format = "ruff . --fix && ruff format . && ruff check --select I . --fix"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
